- New: Add hidden option CASHDESK_FORCE_STOCK_ON_BILL
- New: Can search on part of barcode into POS module.
- New: Cheques into cheques receipts are ordered by operation date.
- New: Add hidden option MAIN_DISABLE_PDF_AUTOUPDATE to avoid generating pdf each time data change.
- New: Add hidden option PROJECT_HIDE_UNSELECTABLES to hide project you can't select into combo list.
- Fix: Can use POS module with several concurrent users.

For developers:
- New: Add webservice to get or create a product, service.
- New: Add webservice to get a user.
- New: Add hooks to change way of showing/editing lines into dictionnaries.
- New: Add webservice to get or create a prodcut or service.
- New: Log module outputs can be setup with "or" rule (not only "xor").
- New: Add FirePHP output for logging module.
- New: Add trigger ACTION_DELETE and ACTION_MODIFY
- Qual: Data structure for supplier prices is simpler.
- Qual: Removed no more used external libraries.
- Qual: Cleaned a lot of dead code.
- Qual: Add more "hooks".
- Qual: Add "canvas" feature to overwrite page of thirdparty, contact, product with yours.
- Qual: More OOP (usage of "abstract", "static", ...), uniformize constructors.
- Qual: task #216 : Move /lib in /core/lib directory
- Qual: task #217 : Move core files in core directory (login, menus, triggers, boxes, modules)


***** ChangeLog for 3.1 compared to 3.0 *****
WARNING: IE6 browser is no more supported in this version.
For users:
- New: War against number of clicks:
     - When adding a free bank transaction, form to add next one is still
       visible (save one click).
     - task #10969 : Add checkbox to close automatically invoice if
       payment is complete (save 3 clicks).
     - Reduce a step into supplier order workflow to save time. If user
       has permission to approve, order is approved when order is validated.
       (Save 2 clicks).
     - In commercial main menu, left menu are already opened. This save one click